--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -12,10 +12,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    backface-visibility: hidden;
     border-radius: 3px;
     overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+    @include backface-visibility(hidden);
 
     &--front {
       background-color: $color-white;
